--- a/ops/nginx/nginx.conf
+++ b/ops/nginx/nginx.conf
@@ -12,10 +12,26 @@ http {
         server admin;
     }
 
+    upstream api {
+        server spiderman;
+    }
+
     server {
         listen 80;
-
         server_name 192.168.99.100;
+
+        location /api {
+            proxy_redirect off;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-NginX-Proxy true;
+            proxy_set_header Connection "";
+            proxy_http_version 1.1;
+            proxy_pass          http://api/;
+        }
+
         location / {
             proxy_redirect off;
             proxy_set_header X-Real-IP $remote_addr;
@@ -28,5 +44,4 @@ http {
             proxy_pass          http://admin_app/;
         }
     }
-
 }
