--- a/ops/nginx/nginx.conf
+++ b/ops/nginx/nginx.conf
@@ -12,7 +12,7 @@ http {
         server admin;
     }
 
-    upstream api {
+    upstream spiderman {
         server spiderman;
     }
 
@@ -20,6 +20,17 @@ http {
         listen 80;
         server_name 192.168.99.100;
 
+        location /api/crawler {
+            proxy_redirect off;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-NginX-Proxy true;
+            proxy_set_header Connection "";
+            proxy_http_version 1.1;
+            proxy_pass          http://spiderman/;
+        }
         location /api {
             proxy_redirect off;
             proxy_set_header X-Real-IP $remote_addr;
@@ -31,7 +42,6 @@ http {
             proxy_http_version 1.1;
             proxy_pass          http://api/;
         }
-
         location / {
             proxy_redirect off;
             proxy_set_header X-Real-IP $remote_addr;
