--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "aio_spider"]
 	path = aio_spider
 	url = https://github.com/derek-adair/aio_spider.git
+[submodule "campaign_engine"]
+	path = campaign_engine
+	url = https://github.com/derek-adair/campaign_engine.git
