--- a/ops/nginx/nginx.conf
+++ b/ops/nginx/nginx.conf
@@ -16,9 +16,13 @@ http {
         server spiderman;
     }
 
+    upstream api {
+       server api;
+    }
+
     server {
         listen 80;
-        server_name 192.168.99.100;
+        server_name localhost;
 
         location /api/crawler {
             proxy_redirect off;
@@ -32,8 +36,6 @@ http {
             proxy_pass          http://spiderman/;
         }
         location /api {
-            proxy_redirect off;
-            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Host $http_host;
