--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,34 @@
 admin:
   build: ./nprima-admin/
+  ports:
+    - "8888:7777"
   expose:
     - "80"
+
 api:
   build: ./nprima-engine/
   dockerfile: rest.Dockerfile
+  links:
+    - postgres:postgres
+  ports:
+    - "8887:80"
+  env_file: ./nprima-engine/.env-docker
   expose: 
     - "80"
+
+postgres:
+  restart: always
+  image: postgres:9.5
+  expose:
+    - "5432"
+  volumes:
+    - pgdata:/var/lib/postgresql/data/
+
 spiderman:
   build: ./aio-spider/
   expose:
     - "80"
+
 lb:
   build: ./ops/nginx/
   links:
