--- a/ops/nginx/nginx.conf
+++ b/ops/nginx/nginx.conf
@@ -42,6 +42,7 @@ http {
         }
         location /api {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            add_header 'Access-Control-Allow-Origin' '*';
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Host $http_host;
             proxy_set_header X-NginX-Proxy true;
